Implement claim quanity check and improve filtering of the getter APIs
