# docs/swagger.json
@@ -34,6 +34,30 @@
                         "description": "Coma separated IDs of the desired records",
                         "name": "ids",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit - limit the result",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -59,9 +83,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Client"
                 ],
-                "operationId": "AdminCreateRewardClaim",
+                "operationId": "CreateUserRewardClaim",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -160,6 +184,30 @@
                         "type": "string",
                         "description": "Coma separated IDs of the desired records",
                         "name": "ids",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "in_stock - possible values: missing, 0- false, 1- true",
+                        "name": "in_stock",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "depleted - possible values: missing, 0- false, 1- true",
+                        "name": "depleted",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit - limit the result",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
                         "in": "query"
                     }
                 ],
@@ -566,7 +614,39 @@
                 "tags": [
                     "Client"
                 ],
-                "operationId": "GetUserHistory",
+                "operationId": "GetUserRewardsHistory",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "reward_type - filter by reward_type",
+                        "name": "reward_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "code - filter by code",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by building_block",
+                        "name": "building_block",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit - limit the result",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -598,6 +678,12 @@
             "properties": {
                 "amount": {
                     "type": "integer"
+                },
+                "building_block": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
                 },
                 "date_created": {
                     "type": "string"
