# driver/web/adapter.go
@@ -87,7 +87,8 @@ func (we Adapter) Start() {
 
 	// Client APIs
 	apiRouter.HandleFunc("/user/balance", we.userAuthWrapFunc(we.apisHandler.GetUserBalance)).Methods("GET")
-	apiRouter.HandleFunc("/user/history", we.userAuthWrapFunc(we.apisHandler.GetUserHistory)).Methods("GET")
+	apiRouter.HandleFunc("/user/rewards_history", we.userAuthWrapFunc(we.apisHandler.GetUserRewardsHistory)).Methods("GET")
+	apiRouter.HandleFunc("/user/claim", we.userAuthWrapFunc(we.apisHandler.CreateUserRewardClaim)).Methods("POST")
 	//apiRouter.HandleFunc("/wallet/{code}/balance", we.userAuthWrapFunc(we.apisHandler.GetWalletBalance)).Methods("GET")
 	//apiRouter.HandleFunc("/wallet/{code}/history", we.userAuthWrapFunc(we.apisHandler.GetWalletHistory)).Methods("GET")
 
