# driver/web/rest/apis.go
@@ -20,6 +20,7 @@ package rest
 import (
 	"encoding/json"
 	"github.com/rokwire/core-auth-library-go/tokenauth"
+	"io/ioutil"
 	"log"
 	"net/http"
 	"rewards/core"
@@ -92,24 +93,35 @@ func (h *ApisHandler) GetUserBalance(userClaims *tokenauth.Claims, w http.Respon
 	w.Write(data)
 }
 
-// GetUserHistory Retrieves the wallet history
+// GetUserRewardsHistory Retrieves the wallet history
 // @Description Retrieves the wallet history
 // @Tags Client
-// @ID GetUserHistory
+// @ID GetUserRewardsHistory
+// @Param reward_type query string false "reward_type - filter by reward_type"
+// @Param code  query string false "code - filter by code"
+// @Param building_block query string false "filter by building_block"
+// @Param limit query integer false "limit - limit the result"
+// @Param offset query integer false "offset"
 // @Success 200
 // @Security UserAuth
 // @Router /user/history [get]
-func (h *ApisHandler) GetUserHistory(userClaims *tokenauth.Claims, w http.ResponseWriter, r *http.Request) {
-	resData, err := h.app.Services.GetWalletHistoryEntries(userClaims.OrgID, userClaims.Subject)
+func (h *ApisHandler) GetUserRewardsHistory(userClaims *tokenauth.Claims, w http.ResponseWriter, r *http.Request) {
+	rewardType := getStringQueryParam(r, "reward_type")
+	code := getStringQueryParam(r, "code")
+	buildingBlock := getStringQueryParam(r, "building_block")
+	limitFilter := getInt64QueryParam(r, "limit")
+	offsetFilter := getInt64QueryParam(r, "offset")
+
+	resData, err := h.app.Services.GetUserRewardsHistory(userClaims.OrgID, userClaims.Subject, rewardType, code, buildingBlock, limitFilter, offsetFilter)
 	if err != nil {
-		log.Printf("Error on apis.GetUserHistory(%s): %s", userClaims.Subject, err)
+		log.Printf("Error on apis.getUserRewardsHistory(%s): %s", userClaims.Subject, err)
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
 
 	data, err := json.Marshal(resData)
 	if err != nil {
-		log.Printf("Error on apis.GetUserHistory(%s): %s", userClaims.Subject, err)
+		log.Printf("Error on apis.getUserRewardsHistory(%s): %s", userClaims.Subject, err)
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
@@ -119,75 +131,47 @@ func (h *ApisHandler) GetUserHistory(userClaims *tokenauth.Claims, w http.Respon
 	w.Write(data)
 }
 
-/*
-// GetWalletBalance Retrieves  the wallet balance
-// @Description Retrieves  the user balance
+// CreateUserRewardClaim Create a new claim inventory
+// @Description Create a new claim inventory
 // @Tags Client
-// @ID GetWalletBalance
-// @Success 200
-// @Security UserAuth
-// @Router /wallet/{code}/balance [get]
-func (h *ApisHandler) GetWalletBalance(userClaims *tokenauth.Claims, w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	code := vars["code"]
+// @ID CreateUserRewardClaim
+// @Accept json
+// @Success 200 {object} model.RewardInventory
+// @Security AdminUserAuth
+// @Router /admin/claims [post]
+func (h ApisHandler) CreateUserRewardClaim(userClaims *tokenauth.Claims, w http.ResponseWriter, r *http.Request) {
 
-	if len(code) == 0 {
-		log.Printf("Error on apis.getWalletBalance(%s): missing code param", userClaims.Subject)
+	data, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		log.Printf("Error on apis.CreateUserRewardClaim: %s", err)
 		http.Error(w, http.StatusText(http.StatusBadRequest), http.StatusBadRequest)
 		return
 	}
 
-	resData, err := h.app.Services.GetWalletBalance(userClaims.Subject, code)
+	var item model.RewardClaim
+	err = json.Unmarshal(data, &item)
 	if err != nil {
-		log.Printf("Error on apis.getWalletBalance(%s): %s", userClaims.Subject, err)
+		log.Printf("Error on apis.CreateUserRewardClaim: %s", err)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	item.UserID = userClaims.Subject
+	createdItem, err := h.app.Services.CreateRewardClaim(userClaims.OrgID, item)
+	if err != nil {
+		log.Printf("Error on apis.CreateUserRewardClaim: %s", err)
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
 
-	data, err := json.Marshal(resData)
+	jsonData, err := json.Marshal(createdItem)
 	if err != nil {
-		log.Printf("Error on apis.getWalletBalance(%s): %s", userClaims.Subject, err)
+		log.Printf("Error on apis.CreateUserRewardClaim: %s", err)
 		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(http.StatusOK)
-	w.Write(data)
+	w.Write(jsonData)
 }
-
-// GetWalletHistory Retrieves the user history
-// @Description Retrieves the user history
-// @Tags Client
-// @ID GetWalletHistory
-// @Success 200
-// @Security UserAuth
-// @Router /wallet/{code}/history [get]
-func (h *ApisHandler) GetWalletHistory(userClaims *tokenauth.Claims, w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-	code := vars["code"]
-
-	if len(code) == 0 {
-		log.Printf("Error on apis.GetWalletHistory(%s): missing code param", userClaims.Subject)
-		http.Error(w, http.StatusText(http.StatusBadRequest), http.StatusBadRequest)
-		return
-	}
-
-	resData, err := h.app.Services.GetWalletHistoryEntries(userClaims.Subject)
-	if err != nil {
-		log.Printf("Error on apis.GetWalletHistory(%s): %s", userClaims.Subject, err)
-		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
-		return
-	}
-
-	data, err := json.Marshal(resData)
-	if err != nil {
-		log.Printf("Error on apis.GetWalletHistory(%s): %s", userClaims.Subject, err)
-		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json; charset=utf-8")
-	w.WriteHeader(http.StatusOK)
-	w.Write(data)
-}*/
